decoupled search results component, estbalished routes to get posts from user
