# backend/generated/swagger.json
@@ -388,8 +388,36 @@
 			"get": {
 				"operationId": "GetPostsForUser",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {},
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/posts/user/accept": {
+			"get": {
+				"operationId": "GetAcceptedPurchase",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {},
+									"type": "object"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
